Fix alignment

--- a/packages/website/less/all.less
+++ b/packages/website/less/all.less
@@ -91,6 +91,16 @@ code {
     background-color: #f2f6ff !important; // lightBlue
 }
 
+#profiler {
+    pre {
+        margin: 0px;
+    }
+
+    .hljs {
+        padding: 12px;
+    }
+}
+
 #wiki {
     p {
         color: #515151; // grey750
